Fix: Fixed windows going off screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --computer-height: 92.5vh;
 
   --taskbar-height: 50px;
-  --taskbar-item-height: 40px;
+  --taskbar-item-height: 4vh;
 
   --startmenu-height: 28vh;
   --startmenu-splash-width: 15%;
